# LazyForecast

./: .gitignore  CLAUDE.md  README.md  ex.py  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
LazyForecast/: LazyForecast.py  requirements.txt
src/lazyforecast/: __init__.py  baselines.py  conformal.py  core.py  forecasters.py  metrics.py  models.py  plotting.py  utils.py  validation.py
tests/: conftest.py  test_baselines.py  test_conformal.py  test_core.py  test_datetime_index.py  test_forecasters.py  test_metrics.py  test_save.py  test_utils.py  test_validation.py
