[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyforecast"
version = "0.1.0"
description = "Automatic univariate time-series forecasting with ranked model evaluation."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Piyush Singh", email = "piyush.singh.office@gmail.com" }]
requires-python = ">=3.9"
keywords = [
    "arima", "timeseries", "forecasting", "pmdarima",
    "scikit-learn", "statsmodels", "pytorch", "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "torch>=2.0",
    "pmdarima>=2.0",
    "scikit-learn>=1.0,<2.0",
    "matplotlib>=3.5",
    "tqdm>=4.60",
]

[project.urls]
Homepage = "https://github.com/piyushsinghoffice/LazyForecast"
Repository = "https://github.com/piyushsinghoffice/LazyForecast.git"

[project.optional-dependencies]
notebook = ["ipython>=7.0"]
dev = ["pytest>=7", "ruff", "twine>=4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lazyforecast = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
